Upgrade to Java 17 & kotlin 1.6.10