@@ -4,7 +4,7 @@ ARG work_dir=/home/$username/work
 ARG gid=1000
 ARG uid=1001
 
-FROM adoptopenjdk:15.0.2_7-jdk-hotspot as worker
+FROM eclipse-temurin:17.0.1_12-jdk-focal as worker
 ARG username
 ARG work_dir
 ARG gid
@@ -85,7 +85,7 @@ COPY --from=checker --chown=$username $work_dir/end-to-end-tests/build/install/e
 COPY --from=checker --chown=$username $work_dir/end-to-end-tests/build/install/end-to-end-tests/lib/internal ./internal
 COPY --from=checker --chown=$username $work_dir/end-to-end-tests/build/install/end-to-end-tests/lib/end-to-end-tests.jar .
 
-ENTRYPOINT ["java", "-jar", "--illegal-access=deny", "-ea", "end-to-end-tests.jar"]
+ENTRYPOINT ["java", "-jar", "-enableassertions", "end-to-end-tests.jar"]
 
 
 FROM worker as auction-xmpp-integration-tests
@@ -96,7 +96,7 @@ COPY --from=checker --chown=$username $work_dir/app-src/auction/xmpp-integration
 COPY --from=checker --chown=$username $work_dir/app-src/auction/xmpp-integration-tests/build/install/auction-xmpp-integration-tests/lib/internal ./internal
 COPY --from=checker --chown=$username $work_dir/app-src/auction/xmpp-integration-tests/build/install/auction-xmpp-integration-tests/lib/auction-xmpp-integration-tests.jar .
 
-ENTRYPOINT ["java", "-jar", "--illegal-access=deny", "-ea", "auction-xmpp-integration-tests.jar"]
+ENTRYPOINT ["java", "-jar", "-enableassertions", "auction-xmpp-integration-tests.jar"]
 
 
 FROM worker as instrumentedapp
@@ -120,7 +120,7 @@ COPY --from=checker --chown=$username $work_dir/build/goos/lib/goos.jar .
 
 EXPOSE 1234
 
-ENTRYPOINT ["simple-xvfb-run", "java", "-javaagent:agents/marathon-java-agent.jar=1234", "-Xshare:off", "--illegal-access=deny", "--add-exports", "java.desktop/sun.awt=ALL-UNNAMED", "-jar", "goos.jar"]
+ENTRYPOINT ["simple-xvfb-run", "java", "-javaagent:agents/marathon-java-agent.jar=1234", "-Xshare:off", "--add-exports", "java.desktop/sun.awt=ALL-UNNAMED", "-jar", "goos.jar"]
 
 COPY --chown=$username scripts/app-running.sh $work_dir/app-running.sh
 
@@ -137,4 +137,4 @@ COPY --from=checker --chown=$username $work_dir/build/goos/lib/external ./extern
 COPY --from=checker --chown=$username $work_dir/build/goos/lib/internal ./internal
 COPY --from=checker --chown=$username $work_dir/build/goos/lib/goos.jar .
 
-ENTRYPOINT ["simple-xvfb-run", "java", "--illegal-access=deny", "-jar", "goos.jar"]
+ENTRYPOINT ["simple-xvfb-run", "java", "-jar", "goos.jar"]
