@@ -12,12 +12,12 @@ import uk.org.lidalia.gradle.plugins.kotlinflat.KotlinFlatPlugin
 
 plugins {
   base
-  kotlin("jvm") version "1.5.31" apply false
+  kotlin("jvm") version "1.6.10" apply false
   id("uk.org.lidalia.kotlin-flat") apply false
   id("uk.org.lidalia.idea-ext") apply false
   id("uk.org.lidalia.download-dependencies")
   id("uk.org.lidalia.copy-without-version")
-  id("com.autonomousapps.dependency-analysis") version "0.78.0"
+  id("com.autonomousapps.dependency-analysis") version "0.79.0"
   id("org.jmailen.kotlinter") version "3.6.0"
   id("com.vanniktech.dependency.graph.generator") version "0.5.0"
   id("com.github.ben-manes.versions") version "0.39.0"
@@ -25,7 +25,7 @@ plugins {
   id("com.dorongold.task-tree") version "2.1.0"
 }
 
-val javaVersion by extra(JavaLanguageVersion.of(15))
+val javaVersion by extra(JavaLanguageVersion.of(17))
 
 apply<ReportingBasePlugin>()
 
@@ -51,7 +51,7 @@ subprojects {
     configure<JavaPluginExtension> {
       toolchain {
         languageVersion.set(javaVersion)
-        vendor.set(JvmVendorSpec.ADOPTOPENJDK)
+        vendor.set(JvmVendorSpec.matching("Eclipse Adoptium"))
       }
 
       consistentResolution {
@@ -90,7 +90,6 @@ subprojects {
         useJUnitPlatform()
         jvmArgs(
           "-Xshare:off",
-          "--illegal-access=deny"
         )
       }
 
